--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,16 @@
 {
   "name": "functions",
   "scripts": {
+    "setup:firebase": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy:test": "source .env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
+    "webhook:bind": "source .env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
+    "webhook:test": "source .env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -21,6 +25,7 @@
     "firebase-functions": "^3.1.0"
   },
   "devDependencies": {
+    "firebase-tools": "^7.2.4",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
