--- a/functions/package.json
+++ b/functions/package.json
@@ -1,13 +1,13 @@
 {
   "name": "functions",
   "scripts": {
-    "setup:firebase": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "deploy:test": "source .env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
     "webhook:bind": "source .env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
     "webhook:test": "source .env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
