--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,7 @@
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run build && node lib/start.js",
+    "test": "npm run build && mocha",
     "deploy": "firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "deploy:test": "source .env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "firebase-tools": "^7.2.4",
+    "mocha": "^6.1.4",
+    "node-fetch": "^2.6.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
