--- a/functions/package.json
+++ b/functions/package.json
@@ -24,9 +24,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "trello": "^0.9.1"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
+    "expect": "^24.9.0",
     "firebase-tools": "^7.2.4",
     "mocha": "^6.1.4",
     "node-fetch": "^2.6.0",
