--- a/functions/package.json
+++ b/functions/package.json
@@ -25,7 +25,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "trello": "^0.9.1"
+    "trello-node-api": "0.0.7"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
