--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,7 @@
   "engines": {
     "node": "8"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
     "@types/cors": "^2.8.6",
     "cors": "^2.8.5",
