--- a/functions/package.json
+++ b/functions/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
+    "ticktick-wrapper": "0.0.4",
     "trello-node-api": "0.0.7"
   },
   "devDependencies": {
