--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run build && node lib/start.js",
+    "start": "npm run build && node lib/tools/start.js",
     "test": "npm run build && mocha",
     "deploy": "firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
