--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run build && node lib/tools/start.js",
-    "test": "npm run build && mocha",
+    "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
     "deploy": "firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "deploy:config": "source ../.env && firebase functions:config:set telegram.userid=${TELEGRAM_USER_ID} trello.apikey=${TRELLO_API_KEY} trello.usertoken=${TRELLO_USER_TOKEN} ticktick.email=${TICKTICK_EMAIL} ticktick.password=${TICKTICK_PASSWORD}",
@@ -33,10 +33,13 @@
     "trello-node-api": "0.0.7"
   },
   "devDependencies": {
+    "@types/expect": "^1.20.4",
+    "@types/mocha": "^5.2.7",
     "expect": "^24.9.0",
     "firebase-tools": "^7.2.4",
     "mocha": "^6.1.4",
     "node-fetch": "^2.6.0",
+    "ts-mocha": "^6.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
