--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "start": "npm run build && node lib/tools/start.js",
     "deploy": "npm run build && firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
-    "deploy:config": "source ../.env && firebase functions:config:set telegram.userid=${TELEGRAM_USER_ID} trello.apikey=${TRELLO_API_KEY} trello.usertoken=${TRELLO_USER_TOKEN} ticktick.email=${TICKTICK_EMAIL} ticktick.password=${TICKTICK_PASSWORD}",
+    "deploy:config": "source ../.env && firebase functions:config:set telegram.userid=${TELEGRAM_USER_ID} trello.apikey=${TRELLO_API_KEY} trello.usertoken=${TRELLO_USER_TOKEN} trello.boardid=${TRELLO_BOARD_ID} ticktick.email=${TICKTICK_EMAIL} ticktick.password=${TICKTICK_PASSWORD}",
     "deploy:test": "source ../.env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
     "webhook:bind": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
     "webhook:test": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
