--- a/functions/package.json
+++ b/functions/package.json
@@ -30,7 +30,7 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "ticktick-wrapper": "0.0.4",
-    "trello-node-api": "0.0.7"
+    "trello-node-api": "github:adrienjoly/trello-node-api"
   },
   "devDependencies": {
     "@types/expect": "^1.20.4",
