--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,5 +21,7 @@ jobs:
           node-version: 10
       - name: npm install
         run: cd functions && npm install --prefer-offline --no-audit
+      - name: build
+        run: cd functions && npm run build
       - name: npm test
         run: cd functions && npm test
