--- a/package.json
+++ b/package.json
@@ -4,10 +4,28 @@
   "description": "A chat-bot that can add comments to Trello cards, from any Telegram client.",
   "scripts": {
     "lint:fix": "npx eslint . --fix",
-    "start": "echo \"Please refer to README.md for setup and usage instructions.\""
+    "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
+    "clean": "rm -rf lib",
+    "build": "tsc",
+    "serve": "npm run build && firebase serve --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "start": "npm run build && node lib/tools/start.js",
+    "deploy": "npm run build && firebase deploy --only functions",
+    "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
+    "deploy:config": "source ../.env && firebase functions:config:set telegram.userid=${TELEGRAM_USER_ID} trello.apikey=${TRELLO_API_KEY} trello.usertoken=${TRELLO_USER_TOKEN} trello.boardid=${TRELLO_BOARD_ID} ticktick.email=${TICKTICK_EMAIL} ticktick.password=${TICKTICK_PASSWORD}",
+    "deploy:test": "source ../.env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
+    "webhook:bind": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
+    "webhook:test": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
+    "logs": "firebase functions:log",
+    "ticktick:test": "ts-node tools/ticktick.ts",
+    "trello:test": "source ../.env && curl -LI \"https://api.trello.com/1/members/me/boards?key=${TRELLO_API_KEY}&token=${TRELLO_USER_TOKEN}\" -s | grep HTTP",
+    "trello:boards": "npm run build && source ../.env && node tools/trello-boards.js"
   },
-  "keywords": [],
-  "author": "",
+  "engines": {
+    "node": "10"
+  },
+  "main": "lib/src/index.js",
+  "author": "Adrien Joly",
   "license": "ISC",
   "eslintConfig": {
     "ignorePatterns": [
@@ -30,11 +48,30 @@
       "mocha": true
     }
   },
+  "dependencies": {
+    "@types/cors": "^2.8.6",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^3.1.0",
+    "ticktick-wrapper": "0.0.4",
+    "trello-node-api": "github:adrienjoly/trello-node-api"
+  },
   "devDependencies": {
+    "@types/expect": "^1.20.4",
+    "@types/mocha": "^5.2.7",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1"
+    "expect": "^24.9.0",
+    "firebase-tools": "^7.2.4",
+    "mocha": "^6.1.4",
+    "node-fetch": "^2.6.0",
+    "prettier": "^1.19.1",
+    "ts-mocha": "^6.0.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.2.2"
   },
   "prettier": {
     "trailingComma": "es5",
