fix: re-move source code into functions/ directory, to prevent firebase errors

--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,5 @@ node_modules/
 .env
 
 ## Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
+functions/lib/**/*.js
+functions/lib/**/*.js.map
