--- a/functions/package.json
+++ b/functions/package.json
@@ -71,6 +71,7 @@
     "expect": "^24.9.0",
     "firebase-tools": "^7.2.4",
     "mocha": "^6.1.4",
+    "nock": "^11.7.0",
     "node-fetch": "^2.6.0",
     "prettier": "^1.19.1",
     "ts-mocha": "^6.0.0",
