--- a/functions/package.json
+++ b/functions/package.json
@@ -7,11 +7,11 @@
     "lint:fix": "npx eslint . --fix",
     "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
     "test:bot": "ts-node tools/bot-cli.ts",
+    "start": "ts-node tools/start.ts",
     "clean": "rm -rf lib",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run build && node lib/tools/start.js",
     "deploy": "npm run build && firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
     "deploy:config": "source ../.env && firebase functions:config:set telegram.userid=${TELEGRAM_USER_ID} trello.apikey=${TRELLO_API_KEY} trello.usertoken=${TRELLO_USER_TOKEN} trello.boardid=${TRELLO_BOARD_ID} ticktick.email=${TICKTICK_EMAIL} ticktick.password=${TICKTICK_PASSWORD}",
