--- a/functions/package.json
+++ b/functions/package.json
@@ -37,8 +37,7 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
     "ticktick-wrapper": "0.0.4",
-    "trello": "^0.9.1",
-    "trello-node-api": "github:adrienjoly/trello-node-api"
+    "trello": "^0.9.1"
   },
   "devDependencies": {
     "@types/expect": "^1.20.4",
