--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
         working-directory: functions/
         run: npm test        
       - name: codechecks
-        run: |
-          npx codechecks
+        working-directory: functions/
+        run: npx codechecks
         env:
           CC_SECRET: ${{ secrets.CC_SECRET }}
