--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "webhook:bind": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
     "webhook:test": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
     "logs": "firebase functions:log",
+    "github:test": "ts-node tools/github-branches.ts",
     "ticktick:test": "ts-node tools/ticktick.ts",
     "trello:test": "source ../.env && curl -LI \"https://api.trello.com/1/members/me/boards?key=${TRELLO_API_KEY}&token=${TRELLO_USER_TOKEN}\" -s | grep HTTP",
     "trello:checklist": "ts-node tools/trello-checklist.ts",
@@ -31,6 +32,7 @@
   "author": "Adrien Joly",
   "license": "ISC",
   "dependencies": {
+    "@octokit/rest": "^16.36.0",
     "@types/cors": "^2.8.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
