--- a/functions/package.json
+++ b/functions/package.json
@@ -39,12 +39,14 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
+    "js-yaml": "^3.13.1",
     "spotify-web-api-node": "^4.0.0",
     "ticktick-wrapper": "0.0.4",
     "trello": "^0.9.1"
   },
   "devDependencies": {
     "@types/expect": "^1.20.4",
+    "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.1",
     "@types/spotify-web-api-node": "^4.0.1",
