--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telegram-scribe-bot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A chat-bot that can add comments to Trello cards, from any Telegram client.",
   "scripts": {
     "lint": "npx eslint src/**/*.ts tools/**/*.ts",
@@ -12,9 +12,9 @@
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "npm run deploy:config && firebase deploy --only functions",
     "deploy:setup": "firebase login && echo \"Don't forget to specify your Firebase app id in .firebaserc, cf README.md\"",
-    "deploy:config": "firebase functions:config:set config=\"$(cat ../.config.json)\"",
+    "deploy:config": "firebase functions:config:set config=\"$(node tools/bot-config-for-firebase.js)\"",
     "deploy:test": "source ../.env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
     "webhook:bind": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
     "webhook:test": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
@@ -27,7 +27,7 @@
     "trello:boards": "ts-node tools/trello-boards.ts"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "lib/src/index.js",
   "author": "Adrien Joly",
