--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,10 @@
 {
   "name": "telegram-scribe-bot",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A chat-bot that can add comments to Trello cards, from any Telegram client.",
   "scripts": {
-    "lint": "npx eslint src/**/*.ts tools/**/*.ts",
-    "lint:fix": "npx eslint src/**/*.ts tools/**/*.ts --fix",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
     "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
     "test:bot": "ts-node tools/bot-cli.ts",
     "start": "ts-node tools/start.ts",
