--- a/functions/package.json
+++ b/functions/package.json
@@ -49,6 +49,7 @@
     "@types/js-yaml": "^3.12.5",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.7",
+    "@types/node-fetch": "^2.5.7",
     "@types/spotify-web-api-node": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
