--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,10 @@
 {
   "name": "telegram-scribe-bot",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A chat-bot that can add comments to Trello cards, from any Telegram client.",
   "scripts": {
-    "lint": "npx eslint src/**/*.ts tools/**/*.ts",
-    "lint:fix": "npx eslint src/**/*.ts tools/**/*.ts --fix",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
     "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
     "test:bot": "ts-node tools/bot-cli.ts",
     "start": "ts-node tools/start.ts",
@@ -49,6 +49,7 @@
     "@types/js-yaml": "^3.12.5",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.7",
+    "@types/node-fetch": "^2.5.7",
     "@types/spotify-web-api-node": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
