fix(vscode): exclude lib/ directory, especially for file search

--- a/functions/.vscode/settings.json
+++ b/functions/.vscode/settings.json
@@ -4,5 +4,13 @@
     "source.fixAll.eslint": true
   },
   "prettier.configPath": ".prettierrc.js",
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "lib/": true,
+  }
 }
