feat(trello): Command to get the next step of each card (#24)
* refacto: get rid of the wrap() function

* fix: throw error instead of returning text as usual

* fix: export TrelloOptions

* move test files next to their implementation file

* test: getNextTrelloTasks returns the first task of the only card of a board

* docs: add "How to add a command" tutorial (wip)

* implement dummy getNextTrelloTasks() => test passes

* write a small tool to examine the response from the 3rd-party API

* docs: update steps 3 and 4 with links to examples

* rename previous tool

* add getNextTodoItem() + call it from tools/trello-checklist-get.ts

* fix(vscode): exclude lib/ directory, especially for file search

* make _getNextTrelloTasks() return actual results from Trello's API

* docs: add step 5 with link to example

* Oops, I had forgotten a hard-coded value

* Make the automated test mock the API requests

* docs: add step 6 with link to example

* refactor: simplify nock code

* refacto: extract mock functions for re-use

* refactor: re-use API mocks

* add traps in the test

* ❌ test: "returns the first tasks of both cards of a board"

* feat: return next steps for more than 1 card

* update doc

* ❌ test: it skips cards that don't have a checklist

* fix test

* ✅ implement: it skips cards that don't have a checklist

* fix: .env is only used for firebase & telegram creds

* test new command => document and ease debugging

* fix: skip empty checklists

* stricter assertions + remote TODOs

* ❌ test:it skips cards that don't have a hashtag

* ease debugging

* _getNextTrelloTasks() fetches cards with tags => allow cards without description

* fix error handling for addAsTrelloComment()

* reduce redundant errors logging in tests

* fix test "returns the first incomplete task of the only card of a board"
=> split extractCardFromTags() into fetchCardsWithTags() and fetchTargetedCards()

* fix tests

--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
-    "test": "ts-mocha -p ./tsconfig.json ./test/*.test.ts",
+    "test": "ts-mocha -p ./tsconfig.json './**/*.test.ts'",
     "test:bot": "ts-node tools/bot-cli.ts",
     "start": "ts-node tools/start.ts",
     "clean": "rm -rf lib",
@@ -18,13 +18,7 @@
     "deploy:test": "source ../.env && curl -X POST -H \"Content-Type:application/json\" ${ROUTER_URL} -d '{}'",
     "webhook:bind": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/setWebhook?url=${ROUTER_URL}",
     "webhook:test": "source ../.env && curl https://api.telegram.org/bot${BOT_TOKEN}/getWebhookInfo",
-    "logs": "firebase functions:log",
-    "spotify:test": "ts-node tools/spotify-album.ts",
-    "github:pr:test": "ts-node tools/github-pr.ts",
-    "ticktick:test": "ts-node tools/ticktick.ts",
-    "trello:test": "source ../.env && curl -LI \"https://api.trello.com/1/members/me/boards?key=${TRELLO_API_KEY}&token=${TRELLO_USER_TOKEN}\" -s | grep HTTP",
-    "trello:checklist": "ts-node tools/trello-checklist.ts",
-    "trello:boards": "ts-node tools/trello-boards.ts"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "12"
