fix: prevent TS type errors from octokit-plugin-create-pull-request cf https://github.com/adrienjoly/telegram-scribe-bot/pull/25/checks?check_run_id=1536862404#step:6:8

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./lib",
     "sourceMap": true,
     "strict": true,
+    "skipLibCheck": true, // to prevent TS type errors from octokit-plugin-create-pull-request
     "target": "es2017",
     "typeRoots": ["./node_modules/@types", "./typings"]
   },
