--- a/functions/package.json
+++ b/functions/package.json
@@ -27,13 +27,14 @@
   "author": "Adrien Joly",
   "license": "ISC",
   "dependencies": {
-    "@octokit/rest": "^18.0.9",
+    "@octokit/rest": "^18.0.12",
     "@types/cors": "^2.8.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.4.1",
-    "firebase-functions": "^3.11.0",
+    "firebase-functions": "^3.12.0",
     "js-yaml": "^3.14.0",
+    "octokit-plugin-create-pull-request": "^3.9.0",
     "spotify-web-api-node": "^5.0.0",
     "ticktick-wrapper": "0.2.0",
     "trello": "^0.10.0"
@@ -42,23 +43,23 @@
     "@types/expect": "^1.20.4",
     "@types/js-yaml": "^3.12.5",
     "@types/mocha": "^8.0.4",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.10",
     "@types/node-fetch": "^2.5.7",
     "@types/spotify-web-api-node": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
     "expect": "^26.6.2",
-    "firebase-tools": "^8.16.2",
+    "firebase-tools": "^8.17.0",
     "mocha": "^8.2.1",
     "nock": "^13.0.5",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "ts-mocha": "^8.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^9.1.0",
+    "typescript": "^4.1.2"
   },
   "prettier": {
     "trailingComma": "es5",
