--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./lib",
     "sourceMap": true,
     "strict": true,
+    "skipLibCheck": true,
     "target": "es2017",
     "typeRoots": ["./node_modules/@types", "./typings"]
   },
