fix(ci): `Dependencies lock file is not found` cf https://github.com/adrienjoly/telegram-scribe-bot/actions/runs/3077042134/jobs/4971616777#step:4:12

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,13 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: browniebroke/read-nvmrc-action@v1 # Read node version from `.nvmrc` file
         id: nvmrc
-      - uses: actions/setup-node@v2.2.0
+      - uses: actions/setup-node@v3
         with:
           node-version: "${{ steps.nvmrc.outputs.node_version }}"
           cache: "npm"
+          cache-dependency-path: functions/package-lock.json
       - name: npm install
         env:
           CI: true
