--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
-    "test": "ts-mocha -p ./tsconfig.json",
+    "test": "NODE_OPTIONS='--loader ts-node/esm' NODE_ENV='test' mocha src/**/*.test.ts",
     "test:bot": "ts-node tools/bot-cli.ts",
     "start": "ts-node tools/start.ts",
     "clean": "rm -rf lib",
@@ -49,7 +49,6 @@
     "nock": "^13.2.9",
     "node-fetch": "^3.3.0",
     "prettier": "^2.8.2",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
