--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
-    "test": "NODE_OPTIONS='--loader ts-node/esm' NODE_ENV='test' mocha src/**/*.test.ts",
+    "test": "NODE_OPTIONS='--loader ts-node/esm' NODE_ENV='test' node --test src/**/*.test.ts",
     "test:bot": "ts-node tools/bot-cli.ts",
     "start": "ts-node tools/start.ts",
     "clean": "rm -rf lib",
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@types/expect": "^1.20.4",
     "@types/js-yaml": "^4.0.5",
-    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "@types/node-fetch": "^2.6.2",
     "@types/spotify-web-api-node": "^5.0.7",
@@ -45,7 +44,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "expect": "^29.3.1",
     "firebase-tools": "^11.20.0",
-    "mocha": "^10.2.0",
     "nock": "^13.2.9",
     "node-fetch": "^3.3.0",
     "prettier": "^2.8.2",
