fix(tests): `RequestError [HttpError]: Bad credentials` cause but nock not intercepting calls to github with FAKE_CREDS solution: https://github.com/nock/nock/issues/2397#issuecomment-1925478357

--- a/functions/package.json
+++ b/functions/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "expect": "^29.3.1",
     "firebase-tools": "^11.20.0",
-    "nock": "^13.2.9",
+    "nock": "^14.0.0-beta.6",
     "node-fetch": "^3.3.0",
     "prettier": "^2.8.2",
     "ts-node": "^10.9.1",
