fix(deploy-firebase): `Invalid config name config.openwhyd.apiClientId, cannot use upper case.`

--- a/.config.example.json
+++ b/.config.example.json
@@ -1,7 +1,7 @@
 {
   "openwhyd": {
-    "apiClientId": "",
-    "apiClientSecret": "",
+    "api_client_id": "",
+    "api_client_secret": "",
     "username": "",
     "password": ""
   },
