fix: `UnrecoverableError: Sign in to confirm you’re not a bot` error in production => switch to YouTube API

--- a/.config.example.json
+++ b/.config.example.json
@@ -3,7 +3,8 @@
     "api_client_id": "",
     "api_client_secret": "",
     "username": "",
-    "password": ""
+    "password": "",
+    "youtube_api_key": ""
   },
   "spotify": {
     "clientid": "",
