feat: add `/openwhyd` command, to post a YouTube track to openwhyd.org (#73)
* start integration of /openwhyd command

* wip: first implem (does not work)

* fix(extractVideoInfo): extracts the title of the YouTube video

* fix(extractVideoInfo): extracts the metadata of the YouTube video

* fix(postYouTubeTrackOnOpenwhyd): integrate metadata towards posting to openwhyd api v2

* fix: adapt API request format to https://github.com/openwhyd/openwhyd/pull/806

* ci: skip tests that fail on CI because of youtube checks (`Sign in to confirm you’re not a bot`)
cf https://github.com/distubejs/ytdl-core/issues/21

* fix: get an access token before requesting openwhyd API

* docs: update README

* bump to v1.8.0

* fix(deploy-firebase): `Invalid config name config.openwhyd.apiClientId, cannot use upper case.`

* fix: `UnrecoverableError: Sign in to confirm you’re not a bot` error in production => switch to YouTube API

* fix: uninstall the dep from the `functions` directory, instead of from root dir

--- a/.config.example.json
+++ b/.config.example.json
@@ -1,4 +1,11 @@
 {
+  "openwhyd": {
+    "api_client_id": "",
+    "api_client_secret": "",
+    "username": "",
+    "password": "",
+    "youtube_api_key": ""
+  },
   "spotify": {
     "clientid": "",
     "secret": ""
