--- a/functions/package.json
+++ b/functions/package.json
@@ -44,7 +44,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "expect": "^29.3.1",
-    "firebase-tools": "15.6.0",
+    "firebase-tools": "^13.7.3",
     "nock": "^14.0.0-beta.6",
     "node-fetch": "^3.3.0",
     "prettier": "^2.8.2",
